update markup some speling changes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="open clicktoclose">
         <p>This is just an Open and Close Window Modal Project build using HTML CSS and Javasctipt and this text is
             in the open window so if you click Close Me! button the window will disappear but wait.. it has some more
-            functionality like you can close this by clicking the blur part outside of window and also by pressing ecs
+            functionality like you can close this by clicking the blur part outside of window and also by pressing esc
             key, How cool it is Right!.</p>
         <button class="close btn"> Close Me!</button>
     </div>
